--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="Aksje_pcentPH">aksje_prosent</string>
+    <string name="menu_overview">Overview</string>
+    <string name="menu_home">Home</string>
 </resources>
