--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="menu_search">Søk</string>
     <string name="menu_buy_sell">Kjøp og Salg</string>
     <string name="menu_settings">Innstillinger</string>
+    <string name="percent_earning">Avkast %:</string>
+    <string name="stock_value">Verdi:</string>
+    <string name="stock_earning">Avkastning:</string>
 </resources>
