--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,17 @@
     <string name="percent_earning">Avkast %:</string>
     <string name="stock_value">Verdi:</string>
     <string name="stock_earning">Avkastning:</string>
+    <string name="stock_name_label">Navn/Ticker</string>
+    <string name="input_stock_name">F eks: \"IBM\"</string>
+    <string name="stock_volume_label">Volum</string>
+    <string name="stock_exchange_label">Kurs</string>
+    <string name="input_stock_volume">F eks: "15"</string>
+    <string name="input_stock_exchange">1 : 4,2</string>
+    <string name="stock_currency_label">Valuta</string>
+    <string name="input_stock_currency">NOK</string>
+    <string name="stock_fee_label">Kurtasje</string>
+    <string name="input_stock_fee">175 NOK</string>
+    <string name="stock_date_label">Dato</string>
+    <string name="input_stock_date">25.05.2015</string>
+    <string name="buy_sell_button">Registrer</string>
 </resources>
