adding functionality to add stocks in viewModel, need to add volume check in future for proper functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="stock_date_label">Dato</string>
     <string name="input_stock_date">25.05.2015</string>
     <string name="buy_sell_button">Registrer</string>
+    <string name="stock_price_label">Pris</string>
+    <string name="aksje_pris_ph">15.3</string>
 </resources>
