register screen working, attempt on reading data from database to get some experience with firebaseDatabase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,6 @@
     <string name="login_failed">"Login failed"</string>
     <string name="login_username">email</string>
     <string name="login_password">Password</string>
+    <string name="stock_wallet_logo">Stock Wallet</string>
+    <string name="register_user_title">Register new user</string>
 </resources>
