Adding ticker field to detailed view in overview recycler plus some minor refactoring to increase performance

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="stock_average_price">Snitt innkjøps pris:</string>
     <string name="stock_intraday">"Endring idag: "</string>
     <string name="stock_nowday_price">Aksjepris idag: </string>
+    <string name="stock_ticker">Ticker:</string>
 </resources>
