--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="menu_settings">Innstillinger</string>
     <string name="percent_earning">Avkastning %:</string>
     <string name="stock_value">Verdi:</string>
-    <string name="stock_earning">Avkastning NOK:</string>
+    <string name="stock_earning">Avkastning:</string>
 
     <string name="stock_name_label">Ticker</string>
     <string name="stock_ticker_search">Ticker:</string>
